[package]
name = "bevy_demo"
version = "0.1.0"
edition = "2021"

[dependencies.bevy]
version = "0.12.1"
default_features = false
features = [
  "bevy_pbr",
  "bevy_gizmos",
  "tonemapping_luts",
  "bevy_winit",
]

[dependencies]
bevy_flycam = "0.12.0"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
